--- a/treac/html/index.html
+++ b/treac/html/index.html
@@ -13,6 +13,7 @@
     </style>
 
     <link href="/static/nouislider.min.css" rel="stylesheet">
+    <script src="/static/jquery-2.2.0.min.js" data-cover></script>
     <script src="/static/nouislider.min.js" data-cover></script>
     <script src="/static/socket.io-1.4.3.js"></script>
 
@@ -61,9 +62,19 @@
     #timer-slider {
         height: 300px;
     }
+    button {
+        background: #fff;
+        border-radius: 7%;
+    }
+    #stop {
+        margin-top: 30px;
+        height: 50px;
+        width: 120px;
+        font: 24px Arial, sans-serif;
+    }
     .below {
         clear: both;
-        padding-top: 20px;
+        padding-top: 10px;
     }
     .left {
         float: left;
@@ -89,6 +100,7 @@
     </div>
     <div class="right">
         <div id="timer-slider"></div>
+        <div><button id="stop" type="button">&#9724; Stop</div>
     </div>
     <div class="below">
         <div id="speed-slider"></div>
@@ -134,7 +146,7 @@ noUiSlider.create(speedSlider, {
     },
     pips: {
         mode: 'values',
-        values: [10, 20, 30, 40, 50, 60, 70, 80],
+        values: [0, 10, 20, 30, 40, 50, 60, 70, 80],
         density: 1,
         format: speedFormat
     },
@@ -223,5 +235,8 @@ function timer() {
     }
 };
 setInterval(timer, 1000);
+$( "#stop" ).on("click", function () {
+    socket.emit("change-state", {"state": "stopped"});
+});
 </script>
 </body>
