--- a/treac/html/index.html
+++ b/treac/html/index.html
@@ -86,6 +86,13 @@
         float: left;
         padding-left: 30px;
     }
+    .blink {
+          animation: blinker 1s linear infinite;
+    }
+
+    @keyframes blinker {  
+          50% { opacity: 0.0; }
+    }
   </style>
 
 </head>
